<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scrollViewStyle"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout style="@style/verticalLinearLayoutSTyle">

        <LinearLayout style="@style/horizontalLinearLayoutSTyle">

            <TextView
                style="@style/counterStyle"
                android:text="1" />

            <TextView
                style="@style/questionStyle"
                android:text="@string/question_1" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/one_a"
            style="@style/optionStyle"
            android:text="@string/q_1_opt_a" />

        <CheckBox
            android:id="@+id/one_b"
            style="@style/optionStyle"
            android:text="@string/q_1_opt_b" />

        <CheckBox
            android:id="@+id/one_c"
            style="@style/optionStyle"
            android:text="@string/q_1_opt_c" />

        <CheckBox
            android:id="@+id/one_d"
            style="@style/optionStyle"
            android:text="@string/q_1_opt_d" />

        <LinearLayout style="@style/horizontalLinearLayoutSTyle">

            <TextView
                style="@style/counterStyle"
                android:text="2" />

            <TextView
                style="@style/questionStyle"
                android:text="@string/question_2" />
        </LinearLayout>

        <EditText
            android:id="@+id/two_ans"
            style="@style/optionStyle"
            android:layout_marginLeft="@dimen/edit_text_marginLeft"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout style="@style/horizontalLinearLayoutSTyle">

            <TextView
                style="@style/counterStyle"
                android:text="3" />

            <TextView
                style="@style/questionStyle"
                android:text="@string/question_3" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/three_radio_grp"
            style="@style/radioGroupStyle">

            <RadioButton
                android:id="@+id/three_a"
                style="@style/radioButtonStyle"
                android:text="@string/q_3_opt_a" />

            <RadioButton
                android:id="@+id/three_b"
                style="@style/radioButtonStyle"
                android:text="@string/q_3_opt_b" />

            <RadioButton
                android:id="@+id/three_c"
                style="@style/radioButtonStyle"
                android:text="@string/q_3_opt_c" />

            <RadioButton
                android:id="@+id/three_d"
                style="@style/radioButtonStyle"
                android:text="@string/q_3_opt_d" />
        </RadioGroup>

        <LinearLayout style="@style/horizontalLinearLayoutSTyle">

            <TextView
                style="@style/counterStyle"
                android:text="4" />

            <TextView
                style="@style/questionStyle"
                android:text="@string/question_4" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/four_radio_grp"
            style="@style/radioGroupStyle">

            <RadioButton
                android:id="@+id/four_a"
                style="@style/radioButtonStyle"
                android:text="@string/q_4_opt_a" />

            <RadioButton
                android:id="@+id/four_b"
                style="@style/radioButtonStyle"
                android:text="@string/q_4_opt_b" />

            <RadioButton
                android:id="@+id/four_c"
                style="@style/radioButtonStyle"
                android:text="@string/q_4_opt_c" />

            <RadioButton
                android:id="@+id/four_d"
                style="@style/radioButtonStyle"
                android:text="@string/q_4_opt_d" />
        </RadioGroup>

        <LinearLayout style="@style/horizontalLinearLayoutSTyle">

            <TextView
                style="@style/counterStyle"
                android:text="5" />

            <TextView
                style="@style/questionStyle"
                android:text="@string/question_5" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/five_radio_grp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ansMarginLeft">

            <RadioButton
                android:id="@+id/five_a"
                style="@style/radioButtonStyle"
                android:text="@string/q_5_opt_a" />

            <RadioButton
                android:id="@+id/five_b"
                style="@style/radioButtonStyle"
                android:text="@string/q_5_opt_b" />

            <RadioButton
                android:id="@+id/five_c"
                style="@style/radioButtonStyle"
                android:text="@string/q_5_opt_c" />

            <RadioButton
                android:id="@+id/five_d"
                style="@style/radioButtonStyle"
                android:text="@string/q_5_opt_d" />
        </RadioGroup>

        <LinearLayout style="@style/horizontalLinearLayoutSTyle">

            <TextView
                style="@style/counterStyle"
                android:text="6" />

            <TextView
                style="@style/questionStyle"
                android:text="@string/question_6" />
        </LinearLayout>

        <EditText
            android:id="@+id/six_ans"
            style="@style/optionStyle"
            android:layout_marginLeft="@dimen/edit_text_marginLeft"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

        <LinearLayout style="@style/horizontalLinearLayoutSTyle">

            <Button style="@style/buttonStyle.Reset" />

            <Button style="@style/buttonStyle.Submit" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
